Dibuat menggunakan Colab

--- a/Template_Submission_Akhir.ipynb
+++ b/Template_Submission_Akhir.ipynb
@@ -48,12 +48,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import statsmodels.api as sm\n",
+        "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+        "from google.colab import files"
+      ]
     },
     {
       "cell_type": "markdown",
