Dibuat menggunakan Colab

--- a/Template_Submission_Akhir.ipynb
+++ b/Template_Submission_Akhir.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -88,7 +88,11 @@
         "id": "wIcv1F9fX4XQ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Memuat tabel day\n",
+        "day_df = pd.read_csv(\"https://raw.githubusercontent.com/Mutasar/sewa-sepeda/refs/heads/main/rawdata/day.csv\")\n",
+        "display(day_df)"
+      ]
     },
     {
       "cell_type": "markdown",
