Dibuat menggunakan Colab

--- a/Template_Submission_Akhir.ipynb
+++ b/Template_Submission_Akhir.ipynb
@@ -32,7 +32,7 @@
         "id": "H9wADwK78DCz"
       },
       "source": [
-        "# Proyek Klasifikasi Gambar: [Input Nama Dataset]\n",
+        "# Proyek Klasifikasi Gambar: [Fruit Classification Dataset]\n",
         "- **Nama:** [Input Nama]\n",
         "- **Email:** [Input Email]\n",
         "- **ID Dicoding:** [Input Username]"
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "wIcv1F9fX4XQ",
         "colab": {
@@ -590,7 +590,7 @@
         "id": "2fsHE50MjI9w",
         "outputId": "f0711355-9805-49ee-ed3a-4c232e52139c"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -646,7 +646,7 @@
         "id": "hd7FRtxVk3zh",
         "outputId": "58780da4-9542-4d6b-c4b1-67eeb51559ce"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -815,7 +815,7 @@
         "id": "MdHjWyxTjTxY",
         "outputId": "a4da0743-c327-46c5-e960-eb4134f0c561"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,7 +864,7 @@
         "id": "ebKYLGm8kOzg",
         "outputId": "edc87820-e4f5-46bf-b764-be89c9800195"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +913,7 @@
       "source": [
         "print(df.dtypes)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -964,7 +964,7 @@
         "df['photographer_last_name'] = df['photographer_last_name'].fillna('Unknown')\n",
         "print(df.isnull().sum())"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1025,7 @@
         "\n",
         "print(df.isnull().sum())"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1080,7 +1080,7 @@
         "\n",
         "print(df.isnull().sum())"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1131,7 +1131,7 @@
         "display(df.head())\n",
         "df.info()"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1673,7 +1673,7 @@
         "print(\"Validation set shape:\", df_val.shape)\n",
         "print(\"Test set shape:\", df_test.shape)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1744,7 +1744,7 @@
         "print(\"\\nThis is an example of a Sequential CNN built from scratch.\")\n",
         "print(\"In your main project, we are using a Sequential model on top of a pre-trained MobileNetV2 base in cell 719c697a.\")"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1990,7 +1990,7 @@
         "# and needs to be refined based on your desired classification categories.\n",
         "# Also, error handling for image loading should be robust."
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2085,7 +2085,7 @@
         "\n",
         "print(\"Model training complete.\")"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
