--- a/template_submission_akhir.ipynb
+++ b/template_submission_akhir.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -483,6 +482,20 @@
     {
       "cell_type": "code",
       "source": [
+        "import zipfile\n",
+        "\n",
+        "with zipfile.ZipFile('fruits.zip', 'r') as zip_ref:\n",
+        "    zip_ref.extractall()\n"
+      ],
+      "metadata": {
+        "id": "j0iSurnM1NC0"
+      },
+      "execution_count": 335,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import os\n",
         "print(os.listdir('fruits'))"
       ],
@@ -491,9 +504,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gF5ZDR28uZ8Z",
-        "outputId": "fe89c641-746c-4627-cae9-86b1590e4178"
+        "outputId": "12447e39-4f05-460d-b740-2052452e993d"
       },
-      "execution_count": 312,
+      "execution_count": 337,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,6 +633,53 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "print(os.listdir())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qajF9M3D1eYs",
+        "outputId": "afb73e92-a337-4cc5-b20c-fe2ad0fc93ba"
+      },
+      "execution_count": 336,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['.config', 'kaggle (4).json', 'fruits', 'fruits-360', 'fruit_images_data.csv', 'combined_dataset', 'kaggle (1).json', 'df_data.csv', 'kaggle (5).json', 'fruits-360_3-body-problem', 'kaggle (2).json', 'fruits-360_100x100', 'fruits-360_multi', 'kaggle.json', 'fruits.zip', 'fruits-360_original-size', 'file.csv', 'fruits-2000-sample', 'fruits-360_dataset_meta', 'updated_fruit_data.csv', 'kaggle (6).json', 'kaggle (3).json', 'sample_data']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(os.listdir('fruits-360'))  # atau 'fruits-360_100x100' jika itu nama foldernya\n"
+      ],
+      "metadata": {
+        "id": "7n8Vogn32qUW",
+        "outputId": "dc886ea5-033a-4352-c2b4-9ad1670ec45a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 343,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['fruits-360_3-body-problem', 'fruits-360_100x100', 'fruits-360_multi', 'fruits-360_original-size', 'fruits-360_dataset_meta']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Define the correct paths for the training and testing directories\n",
         "train_dir = 'fruits/fruits-360_100x100/fruits-360/Training'\n",
         "test_dir = 'fruits/fruits-360_100x100/fruits-360/Test'"
@@ -627,7 +687,7 @@
       "metadata": {
         "id": "Sj__eJy4vvQ-"
       },
-      "execution_count": 323,
+      "execution_count": 344,
       "outputs": []
     },
     {
@@ -640,7 +700,7 @@
       "metadata": {
         "id": "uLKkijZyv0g3"
       },
-      "execution_count": 319,
+      "execution_count": 345,
       "outputs": []
     },
     {
@@ -664,7 +724,7 @@
       "metadata": {
         "id": "-JxKvh2tv8w4"
       },
-      "execution_count": 320,
+      "execution_count": 340,
       "outputs": []
     },
     {
@@ -689,9 +749,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1A2WdjcJwEVi",
-        "outputId": "889e4b18-fbe2-4289-ec3e-2fb5db67ad27"
+        "outputId": "fc32b536-e59a-4bbb-eb05-b1196dafd18c"
       },
-      "execution_count": 324,
+      "execution_count": 341,
       "outputs": [
         {
           "output_type": "stream",
@@ -711,6 +771,57 @@
       "metadata": {
         "id": "9ICO2-E0YxzD"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Path ke folder Training\n",
+        "train_dir = 'fruits/fruits-360_100x100/fruits-360/Training'\n",
+        "\n",
+        "# List untuk menyimpan data\n",
+        "data = []\n",
+        "\n",
+        "# Loop setiap kelas (subfolder)\n",
+        "for class_name in os.listdir(train_dir):\n",
+        "    class_path = os.path.join(train_dir, class_name)\n",
+        "    if os.path.isdir(class_path):\n",
+        "        for img_name in os.listdir(class_path):\n",
+        "            img_path = os.path.join(class_path, img_name)\n",
+        "            data.append({'filepath': img_path, 'label': class_name})\n",
+        "\n",
+        "# Buat DataFrame\n",
+        "df_images = pd.DataFrame(data)\n",
+        "print(df_images.head())\n",
+        "print(\"Jumlah data:\", len(df_images))\n",
+        "print(\"Jumlah kelas:\", df_images['label'].nunique())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zy_IvP7R0riC",
+        "outputId": "050f6c72-fed0-498b-d804-8569cc52851f"
+      },
+      "execution_count": 348,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                            filepath     label\n",
+            "0  fruits/fruits-360_100x100/fruits-360/Training/...  Cherry 4\n",
+            "1  fruits/fruits-360_100x100/fruits-360/Training/...  Cherry 4\n",
+            "2  fruits/fruits-360_100x100/fruits-360/Training/...  Cherry 4\n",
+            "3  fruits/fruits-360_100x100/fruits-360/Training/...  Cherry 4\n",
+            "4  fruits/fruits-360_100x100/fruits-360/Training/...  Cherry 4\n",
+            "Jumlah data: 103993\n",
+            "Jumlah kelas: 206\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -738,9 +849,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sMOpfJ6jxXmq",
-        "outputId": "9ce615f7-e462-458d-8595-2308445ed65c"
+        "outputId": "2af85a7f-2cb7-4c84-a0d3-a998022db270"
       },
-      "execution_count": 326,
+      "execution_count": 331,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,9 +903,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g21iwvjqXiUO",
-        "outputId": "ea2efa7d-c6af-494d-bbd9-68a2f40adb85"
+        "outputId": "4dd01957-2933-4dda-9add-4ec9324c4983"
       },
-      "execution_count": 285,
+      "execution_count": 327,
       "outputs": [
         {
           "output_type": "stream",
@@ -1230,6 +1341,68 @@
             ]
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "97b32e8e",
+        "outputId": "ccd59e76-6cba-4f8e-d00e-b62af036ee80"
+      },
+      "source": [
+        "import os\n",
+        "\n",
+        "# Assuming the dataset was downloaded by kagglehub to /kaggle/input/fruits/\n",
+        "dataset_download_path = '/kaggle/input/fruits/'\n",
+        "\n",
+        "# Check if the download path exists\n",
+        "if os.path.exists(dataset_download_path):\n",
+        "    print(f\"Checking for zip files in: {dataset_download_path}\")\n",
+        "\n",
+        "    # Find the zip file(s)\n",
+        "    zip_files = [f for f in os.listdir(dataset_download_path) if f.endswith('.zip')]\n",
+        "\n",
+        "    if zip_files:\n",
+        "        # Assuming there's one main zip file to unzip\n",
+        "        zip_file_to_unzip = zip_files[0]\n",
+        "        zip_file_path = os.path.join(dataset_download_path, zip_file_to_unzip)\n",
+        "\n",
+        "        # Define the extraction directory (e.g., in the current working directory)\n",
+        "        extract_dir = './fruits_extracted' # You can change this\n",
+        "\n",
+        "        print(f\"Found zip file: {zip_file_path}\")\n",
+        "        print(f\"Unzipping to: {extract_dir}\")\n",
+        "\n",
+        "        # Create the extraction directory if it doesn't exist\n",
+        "        os.makedirs(extract_dir, exist_ok=True)\n",
+        "\n",
+        "        # Unzip the file\n",
+        "        # Using a shell command with !unzip\n",
+        "        try:\n",
+        "            !unzip -q \"{zip_file_path}\" -d \"{extract_dir}\"\n",
+        "            print(\"Unzipping complete.\")\n",
+        "            print(f\"Contents of extraction directory: {os.listdir(extract_dir)}\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"An error occurred during unzipping: {e}\")\n",
+        "\n",
+        "    else:\n",
+        "        print(f\"No zip files found in {dataset_download_path}. Please ensure the dataset was downloaded correctly.\")\n",
+        "else:\n",
+        "    print(f\"Dataset download path not found at {dataset_download_path}. Please ensure cell wIcv1F9fX4XQ was run successfully.\")"
+      ],
+      "execution_count": 330,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Checking for zip files in: /kaggle/input/fruits/\n",
+            "No zip files found in /kaggle/input/fruits/. Please ensure the dataset was downloaded correctly.\n"
+          ]
         }
       ]
     }
